# kaem-sdk

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  publish.yml
src/: ipc.rs  lib.rs  transport.rs
src/modules/: mod.rs
src/modules/khyber/: decrypt.rs  encrypt.rs  generate_keys.rs  ipc.rs  mod.rs
