[package]
name = "kaem-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["net", "io-util", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3"
bytes = "1"